--- a/site/.env-example
+++ b/site/.env-example
@@ -1,4 +1,4 @@
-WORDPRESS_SITE_URL=xxxx
+WORDPRESS_SITE_URL=https://loft.aprilfairy.com
 GATSBY_SITE_URL=xxx
 GOOGLE_TAGMANAGER_ID=xxx
 FB_APP_ID=xxx
